# deepagents

./: decoupling.md  decoupling2.md  pyproject.toml  upgrade.md
libs/deepagents-cli/: pyproject.toml
libs/deepagents-cli/deepagents_cli/: app.py  mcp_proxy.py
libs/deepagents-web/: pyproject.toml
libs/deepagents-web/deepagents_web/api/: sessions.py
libs/deepagents-web/deepagents_web/extensions/: __init__.py  agent_factory.py  context_utils.py  models.py  sessions.py  settings.py  skills.py  wrap_up.py
libs/deepagents-web/deepagents_web/services/: agent_service.py  hybrid_executor.py  hybrid_service.py  rpa_service.py  skill_service.py
libs/deepagents-web/deepagents_web/static/js/: chat.js
libs/deepagents-web/tests/: test_agent_service.py  test_api.py  test_chat_frontend.py
libs/harbor/: pyproject.toml
