[project]
name = "deepagents-workspace"
version = "0.1.0"
description = "Monorepo for DeepAgents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.5",
    "deepagents-web",
    "langchain-google-vertexai>=3.2.2",
]

[tool.uv.workspace]
members = [
    "libs/deepagents-web",
]

[tool.uv.sources]
deepagents-web = { workspace = true }
